GNOME Bugzilla – Bug 666241
Master branch breaks at build time
Last modified: 2012-01-10 11:10:16 UTC
There are some deprecated symbols that need to be replaced, GtkVBox for instance.
Created attachment 203560 [details] [review] Replace deprecated symbols Fixes the bug.
Review of attachment 203560 [details] [review]: You probably want to mention the bug number in the commit message, and I would mention boxes in the first line too. I think that you missed some other VBox and HBox deprecations, and they are probably worth fixing at the same time: src/plugins/evolution/evolution.c: p->vbox = gtk_vbox_new (FALSE, 8); src/plugins/nautilus-sendto-progress.c: vbox = gtk_vbox_new (FALSE, 6); src/plugins/nautilus-sendto-progress.c: hbox = gtk_hbox_new (FALSE, 4); src/plugins/removable-devices/removable-devices.c: box = gtk_vbox_new (FALSE, 8); src/plugins/socialweb/socialweb.c: page->page = gtk_vbox_new (FALSE, 8); data/nautilus-sendto.ui: <object class="GtkHBox" id="hbox_contacts_widgets"> data/nautilus-sendto.ui: <object class="GtkHBox" id="hbox2"> ::: src/plugins/nautilus-sendto-packer.h @@ -32,2 +32,2 @@ typedef struct { - GtkVBox parent; + GtkBox parent; This will need a corresponding change in the .c file. You need to add a call to gtk_orientable_set_orientation() in the instance init function, so that the orientation of the box is set to vertical, because the default orientation of a GtkOrientable is horizontal: http://developer.gnome.org/gtk3/stable/gtk3-Orientable.html
Update: Build process breaks for master due to some deprecated symbols. This just happens during maintainer mode: In file included from evolution.c:29:0: ../../../src/plugins/nautilus-sendto-packer.h:33:2: error: unknown type name 'GtkVBox' ../../../src/plugins/nautilus-sendto-packer.h:38:2: error: unknown type name 'GtkVBoxClass' evolution.c: In function 'evolution_plugin_get_widget': evolution.c:269:2: warning: implicit declaration of function 'gtk_vbox_new' [-Wimplicit-function-declaration] evolution.c:269:2: warning: nested extern declaration of 'gtk_vbox_new' [-Wnested-externs] evolution.c:269:10: warning: assignment makes pointer from integer without a cast [enabled by default] make[6]: *** [evolution.lo] Error 1 make[6]: Leaving directory `/home/patriciasc/Development/checkout/gnome3/nautilus-sendto/src/plugins/evolution' make[5]: *** [all] Error 2 make[5]: Leaving directory `/home/patriciasc/Development/checkout/gnome3/nautilus-sendto/src/plugins/evolution' make[4]: *** [all-recursive] Error 1 make[4]: Leaving directory `/home/patriciasc/Development/checkout/gnome3/nautilus-sendto/src/plugins' make[3]: *** [all] Error 2 make[3]: Leaving directory `/home/patriciasc/Development/checkout/gnome3/nautilus-sendto/src/plugins' make[2]: *** [all-recursive] Error 1 make[2]: Leaving directory `/home/patriciasc/Development/checkout/gnome3/nautilus-sendto/src' make[1]: *** [all-recursive] Error 1 make[1]: Leaving directory `/home/patriciasc/Development/checkout/gnome3/nautilus-sendto' make: *** [all] Error 2
Created attachment 203862 [details] [review] Replace deprecated symbols Fixes this bug.
Created attachment 203883 [details] [review] Replace deprecated symbols Fixes this bug.
Review of attachment 203883 [details] [review]: Covers all my comments, I think. Looks good.
Review of attachment 203883 [details] [review]: Looks fine apart from the comment. Please use the bug URL as a reference. ::: data/pack-entry.ui @@ -18,3 @@ </data> </object> - <object class="GtkVBox" id="vbox4"> Why all those changes here? Seem to me that a simple s/Gtk[VH]Box/GtkBox/ would have been enough as the orientation is already present.
Created attachment 204931 [details] [review] Updated patch based on review in comment https://bugzilla.gnome.org/show_bug.cgi?id=666241#c7
commit a7b68931d35a7b0c3aa83e00935401709b6f26c0 Author: Patricia Santana Cruz <patriciasantanacruz@gmail.com> Date: Tue Jan 10 10:48:53 2012 +0000 Replace deprecated symbols GtkVbox and GtkHbox are deprecated in GTK+3 and therefore, have been replaced in the code by GtkBox objects with vertical and horizontal orientation. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=666241.