Replace deprecated symbols

GtkVbox and GtkHbox are deprecated in GTK+3 and therefore, have been
replaced in the code by GtkBox objects with vertical and horizontal
orientation.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=666241.